[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/scripts/fight_manager.gd" type="Script" id=1]
[ext_resource path="res://scenes/arena.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/arena/strategy_screen.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/deck_manager.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=3]
resource_name = "default"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("StrategyScreen/CanvasLayer/TextureRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StrategyScreen/CanvasLayer/TextureRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "strat_screen_close"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("StrategyScreen/CanvasLayer/TextureRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=1]
resource_name = "strat_screen_open"
tracks/0/type = "value"
tracks/0/path = NodePath("StrategyScreen/CanvasLayer/TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StrategyScreen/CanvasLayer/TextureRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="FightManager" type="Node2D"]
script = ExtResource( 1 )

[node name="ArenaManager" parent="." instance=ExtResource( 2 )]

[node name="DeckManager" parent="." instance=ExtResource( 4 )]

[node name="StrategyScreen" parent="." instance=ExtResource( 3 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/default = SubResource( 3 )
anims/strat_screen_close = SubResource( 2 )
anims/strat_screen_open = SubResource( 1 )

[connection signal="begin" from="StrategyScreen" to="." method="_on_StrategyScreen_begin"]

[editable path="StrategyScreen"]
